<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="1"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/profile_text"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/backbutton"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/avatar"
        android:background="@color/backgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/avatar"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/text_notlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notLogin"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="62dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:text="@string/button_Loing"
        android:layout_marginBottom="26dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="96dp"
        android:background="@drawable/button_login"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:text="@string/button_register"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:background="@drawable/button_login" />

</LinearLayout>